fixed scrollbar issue in firefox

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,6 @@
   box-sizing: border-box;
 }
 
-html,
 body {
   height: 100vh;
   width: 100vw;
@@ -93,7 +92,7 @@ $border: hsl(0, 0%, 20%);
 
     font-size: 1rem;
     font-weight: 500;
-    
+
     outline: none;
     border-radius: 0.25em;
     border: 1px solid $border;
@@ -115,7 +114,7 @@ $border: hsl(0, 0%, 20%);
 #searchResults {
   display: flex;
   flex-flow: column;
-  
+
   margin: 0 auto;
   width: 100%;
   max-width: 64em;
